<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="launcherDialer">Phone</string>
    <string name="application_name">"Contacts"</string>
    <string name="people">Contacts</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to send message</string>
    <string name="contactPickerActivityTitle">Choose contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequently contacted</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactDesription">View contact</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="GroupFounctions">"Options"</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_newContact">Save as new contact</string>
    <string name="menu_callNumber">Call <xliff:g id="number">%s</xliff:g></string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="splitConfirmation_title">Separate contact?</string>
    <string name="splitConfirmation">This contact will be separated into multiple contacts.</string>
    <string name="titleJoinContactDataWith">Join contacts</string>
    <string name="blurbJoinContactDataWith">Select contact to join with <xliff:g id="name">%s</xliff:g>:</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts joined</string>
    <string name="readOnlyContactWarning">You can\'t delete contacts from read-only account, but you can hide them in your contacts list.</string>
    <string name="readOnlyContactDeleteConfirmation">This contact contains information from multiple accounts. Information from read-only accounts will be hidden in your contacts list, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete information from multiple accounts, delete?</string>
    <string name="deleteConfirmation">Delete 1 item?</string>
    <string name="deletesConfirmation" msgid="811706994761610640">"Delete <xliff:g id="COUNT">%d</xliff:g> items?"</string>
    <string name="menu_done">Done</string>
    <string name="menu_doNotSave">Cancel</string>
    <string name="label_notes">Notes</string>
    <string name="label_sip_address">Internet call</string>
    <string name="ghostData_company">Company</string>
    <string name="ghostData_title">Title</string>
    <string name="invalidContactMessage">This contact doesn\'t exist.</string>
    <string name="contact_deleted_message">This contact is deleted.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="emailLabelsGroup">Email</string>
    <string name="imLabelsGroup">IM</string>
    <string name="postalLabelsGroup">Address</string>
    <string name="snsLabelsGroup"> Network community </string>
    <string name="snsTypeHome"> Home </string>
    <string name="snsTypeWork"> Work </string>
    <string name="snsTypeOther"> Others </string>
    <string name="snsTypeCustom"> Custom </string>
    <string name="snsCommunityRenRen"> Renren </string>
    <string name="snsCommunityKaixin"> Kaixin </string>
    <string name="snsCommunitySinaWeibo"> Weibo </string>
    <string name="snsCommunityCustom"> Custom </string>
    <string name="snsInputHint">Enter nickname</string>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">Find no contacts.</string>
    <string name="noMatchingContacts">No matching contacts found.</string>
    <string name="noContactsWithPhoneNumbers">No valid contacts.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="savingDisplayGroups">Saving display options\u2026</string>
    <string name="contactSavedToast">Contact saved</string>
    <string name="contactSavedErrorToast">Unable to save contact changes.</string>
    <plurals name="listTotalAllContacts">
        <item quantity="one">1 contact</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts</item>
    </plurals>
    <string name="listTotalAllContactsZero">No contacts.</string>
    <string name="listTotalAllContactsZeroStarred">No favorites.</string>
    <string name="foundTooManyContacts">More than <xliff:g id="count">%d</xliff:g> contacts found.</string>
    <string name="listFoundAllContactsZero">Find no contacts</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 contact found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts found</item>
    </plurals>
    <string name="contactsAllLabel">Contacts</string>
    <string name="contactsGroupsLabel">Groups</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="recentCallsIconLabel">Call logs</string>
    <string name="menu_sendTextMessage">Send message</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="voicemail">Voicemail</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="simContacts_emptyLoading">Loading from SIM\u2026</string>
    <string name="simContacts_title">SIM contacts</string>
    <string name="noContactsHelpTextWithSyncForCreateShortcut">"You don't have any contacts to display. (If you just added an account, it may take a few minutes to sync contacts.)"</string>
    <string name="noContactsHelpTextForCreateShortcut">"No contacts are available to display."</string>
    <string name="noContactsHelpText" product="default">"You don't have any contacts to display.\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SIM or SD card\n</li>"</string>
    <string name="noContactsHelpTextWithSync" product="default">"You don't have any contacts to display. (If you just added an account, it can take a few minutes to sync contacts.)\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>        \n<li><font fgcolor="#ffffffff"><b>Display options</b></font> to change which contacts are visible\n</li>        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SIM or SD card\n</li>"</string>
    <string name="noContactsNoSimHelpText" product="default">"You don't have any contacts to display.\n\nTo add contacts, touch <font fgcolor="#ffffffff"><b>Menu</b></font>, then touch:\n
        \n<li><font fgcolor="#ffffffff"><b>Accounts</b></font> to add or set up an account with contacts you can sync to the phone\n</li>        \n<li><font fgcolor="#ffffffff"><b>New contact</b></font> to create a new contact from scratch\n</li>        \n<li><font fgcolor="#ffffffff"><b>Import/Export</b></font> to import contacts from your SD card\n</li>"</string>
    <string name="description_image_button_one">One</string>
    <string name="description_image_button_two">Two</string>
    <string name="description_image_button_three">Three</string>
    <string name="description_image_button_four">Four</string>
    <string name="description_image_button_five">Five</string>
    <string name="description_image_button_six">Six</string>
    <string name="description_image_button_seven">Seven</string>
    <string name="description_image_button_eight">Eight</string>
    <string name="description_image_button_nine">Nine</string>
    <string name="description_image_button_star">Star</string>
    <string name="description_image_button_zero">Zero</string>
    <string name="description_image_button_pound">Pound</string>
    <string name="contacts_settings_read_from_vcard">Import from memory card</string>
    <string name="contacts_settings_put_info_in_vcard">Export to memory card</string>
    <string name="contacts_settings_auto_favorite_contacts">Favorites suggest</string>
    <string name="contacts_settings_yunsync">Sync contacts</string>
    <string name="contacts_settings_display_favorite_contacts">Show favorites</string>
    <string name="cancel">Cancel</string>
    <string name="xxsim_sim_card_1">SIM1</string>
    <string name="xxsim_sim_card_2">SIM2</string>
    <string name="contacts_settings_import_title">"Import contacts"</string>
    <string name="contacts_settings_export_title">"Export contacts"</string>
    <string name="contacts_settings_cloud_sync">"Cloud sync"</string>
    <string name="contacts_settings_security_title">"Security"</string>
    <string name="contacts_settings_blacklist">"Blacklist"</string>
    <string name="view_my_personal_info">View my profile</string>
    <string name="plugins_list">More functions</string>
    <string name="done">Done</string>
    <string name="calllog_sync">Back up call logs</string>
    <string name="setting_contact_manage_label">Contacts management</string>
    <string name="setting_contact_display_label">Contacts display</string>
    <string name="contacts_settings_photo_onoff">Display contact photo</string>
    <string name="contacts_settings_profile_none">Not set</string>
    <string name="dualcard_settings_label">Number Management</string>
    <string name="tag_auto_mark_label">Mark strange calls</string>
    <string name="tag_auto_mark_description">Mark after strange number hang up</string>
    <string name="quick_call_setting">Speed Dial Setting</string>
    <string name="dup_rm_activity_title">Clean contacts</string>
    <string name="dup_rm_introduct_title">Clean contacts will help you :</string>
    <string name="dup_rm_introduct_text">
         1. Auto-merge identical contacts\n
         2. Search contacts with the same name or number which you may want to merge\n
         3. Search contacts with no name or no number which you may want to edit or delete</string>
    <string name="start_check">Clean now</string>
    <string name="contacts_setting_group_title">Group</string>
    <string name="contacts_setting_group_sendsms">Group sendsms</string>
    <string name="group_member_title">Group Member</string>
    <string name="gadet_footer_label">Dial up</string>
    <string name="gadget_empty">No Call Logs</string>
    <string name="gadget_title_recent_calls">Recent Calls</string>
</resources>