<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- Dialpad in the Phone app. -->
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/dialpad_vertical_margin"
    android:showDividers="beginning|middle|end"
    android:background="@color/dialpad_digtal_field_bg_color"
    android:divider="@drawable/dial_keyborad_bg_normal"
    android:dividerHeight="1px">

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/one" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_1_selector"
            android:contentDescription="@string/description_image_button_one" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/two" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_2_selector"
            android:contentDescription="@string/description_image_button_two" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/three" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_3_selector"
            android:contentDescription="@string/description_image_button_three" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/four" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_4_selector"
            android:contentDescription="@string/description_image_button_four" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/five" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_5_selector"
            android:contentDescription="@string/description_image_button_five" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/six" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_6_selector"
            android:contentDescription="@string/description_image_button_six" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/seven" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_7_selector"
            android:contentDescription="@string/description_image_button_seven" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/eight" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_8_selector"
            android:contentDescription="@string/description_image_button_eight" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/nine" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_9_selector"
            android:contentDescription="@string/description_image_button_nine" />
    </TableRow>

    <TableRow
         android:layout_height="0px"
         android:layout_weight="1">
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/star" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_10_selector"
            android:contentDescription="@string/description_image_button_star" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/zero" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_0_selector"
            android:contentDescription="@string/description_image_button_zero" />
        <View
            android:layout_height="match_parent"
            android:layout_width="1px"
            android:background="@drawable/dial_keyborad_bg_normal">
        </View>
        <com.yunos.alicontacts.dialpad.DialpadImageButton
            android:id="@+id/pound" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_keyborad_number_11_selector"
            android:contentDescription="@string/description_image_button_pound" />
    </TableRow>
</TableLayout>
