<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:background="@drawable/actionbar_view_line"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/left_item"
        android:layout_width="48dp"
        android:layout_height="@dimen/action_bar_height"
        android:contentDescription="@string/cancel"
        android:paddingStart="16dp"
        android:scaleType="center"
        android:src="@drawable/actionbar_back_selector"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="@dimen/action_bar_height"
        android:layout_weight="1"
        android:clickable="false"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/editContactDescription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/activity_header_text_color" />

    <FrameLayout
        android:id="@+id/right_item"
        android:layout_width="48dp"
        android:layout_height="@dimen/action_bar_height"
        android:contentDescription="@string/done"
        android:paddingEnd="16dp"
        android:scaleType="center" />

</LinearLayout>
