<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/dup_rm_introduct_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/contact_primary_text_color_black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="26dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/dup_rm_introduct_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#999999"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btn_start_check"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_check"
        android:textColor="@color/button_text_color"/>

</RelativeLayout>
