<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:orientation="horizontal" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/title_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cancel"
            android:paddingStart="16dp"
            android:scaleType="center"
            android:src="@drawable/cancel_selector" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/editContactDescription"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/activity_header_text_color" />

        <ImageView
            android:id="@+id/save"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/done"
            android:paddingEnd="16dp"
            android:scaleType="center"
            android:src="@drawable/done_selector" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/header_line_color" />

</LinearLayout>