<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gadget_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/appwidget_bg">
        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/gadget_title_recent_calls"
            android:textColor="@color/gadget_header_text_color_primary" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_divider"
        android:contentDescription="@null" />

    <!-- Event list -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ListView
            android:id="@+id/call_log_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:listSelector="@android:color/transparent"
            android:cacheColorHint="@null"/>

        <LinearLayout
            tools:ignore="UseCompoundDrawables"
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/empty_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.3"
                android:src="@drawable/card_icon_empty_selector"
                android:contentDescription="@null" />
            <TextView
                android:id="@+id/empty_text"
                style="@style/TextAppearance.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/gadget_empty"
                android:textColor="@color/gadget_text_color_tertiary" />
        </LinearLayout>
    </FrameLayout>

    <!-- Footer -->
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@drawable/gadget_calllog_item_background">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentTop="true"
            android:background="@drawable/listview_divider"
            android:contentDescription="@null" />

        <TextView android:id="@+id/dial"
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="2dp"
            android:drawableTop="@drawable/ic_dockcard_dial"
            android:drawablePadding="4dp"
            android:text="@string/gadet_footer_label"
            android:textColor="@color/gadget_footer_text_color"
            android:contentDescription="@null" />
    </RelativeLayout>
</LinearLayout>
